margenes productos servicios

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -63,7 +63,7 @@
 
         <!-- Main Section. Descripcion de Servicios + Lista de Servicios + Preguntas Frecuentes-->
         <main>
-            <section class="serviciosDescripcion p-3">
+            <section class="serviciosDescripcion my-4">
                 <h2>Servicios</h2>
                 <p>Gracias a mas de cuatro decadas de experiencia en el mundo agropecuario, contamos con las herramientas necesarias para ayudarte en tu negocio, o capacitarte para que puedas empezarlo. Esperamos tu consulta!</p>
             </section>
@@ -102,7 +102,7 @@
             </section>
 
             <!-- Preguntas Frecuentes FAQ sobre tutorias -->
-            <section class="container-fluid justify-content-center accordion accordion-flush pt-3" id="accordionFAQ">
+            <section class="container-fluid justify-content-center accordion accordion-flush my-5" id="accordionFAQ">
                 <h2 class="text-center">Cursos y Tutorias: Preguntas Frecuentes</h2>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
