--- a/pages/productos.html
+++ b/pages/productos.html
@@ -93,7 +93,7 @@
 
             <!-- Grid Productos -->
             <section class="container-fluid">
-                <h2 class="text-center">Productos</h2>
+                <h2 class="text-center my-4">Productos</h2>
                 <div class="row g-3 row-cols-auto justify-content-center"> 
                     <div class="col">
                         <div class="card align-items-center">
