--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -71,9 +71,9 @@
                 Con la experiencia adquirida, comenzamos a proveer material apicola en todo el pais, desde indumentaria para el pequeño productor hasta maquinaria para grandes empresas.
                 </p>
             </section>
-            <section class="comunidadesAmigas d-flex justify-content-center">
 
-                <!-- Offcanvas Menu -->
+            <!-- Comunidades Amigas - Offcanvas Menu -->
+            <section class="comunidadesAmigas d-flex justify-content-center">
                 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas" aria-labelledby="offCanvasLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title">Comunidades Amigas:</h5>
