pagina productos: grid y politicas

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 </div>
                 <div class="benefits container-fluid text-center color-bright">
                     <div class="row">
-                        <div class="col-12 col-md-4"><i class="bi bi-truck"></i> Entregas a todo el pais</div>
-                        <div class="col-12 col-md-4"><i class="bi bi-shield-check"></i> Aprobado por SENASA</div>
-                        <div class="col-12 col-md-4"><i class="bi bi-clock"></i> Atendemos las 24 horas</div>
+                        <div class="col-12 col-md-4 mb-2"><i class="bi bi-truck"></i> Envios a todo el pais</div>
+                        <div class="col-12 col-md-4 mb-2"><i class="bi bi-shield-check"></i> Aprobado por SENASA</div>
+                        <div class="col-12 col-md-4 mb-2"><i class="bi bi-clock"></i> Atendemos las 24 horas</div>
                     </div>
                 </div>
 
