--- a/pages/productos.html
+++ b/pages/productos.html
@@ -92,7 +92,7 @@
             </section>
 
             <!-- Grid Productos -->
-            <section class="container-fluid">
+            <section class="grid-productos container-fluid">
                 <h2 class="text-center my-4">Productos</h2>
                 <div class="row g-3 row-cols-auto justify-content-center"> 
                     <div class="col">
@@ -145,6 +145,33 @@
                     </div>
                 </div>
 
+            </section>
+
+            <!-- Devoluciones y Envios -->
+            <section class="devoluciones container-fluid justify-content-center accordion accordion-flush my-5" id="accordionFAQ">
+                <h2 class="text-center">Politicas de Envios y Devoluciones</h2>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            Envios
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFAQ">
+                        <div class="accordion-body">Hacemos envios a todo el pais. Para compras superiores a $5000, cubrimos el 50% del costo de envio. 
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Devoluciones
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFAQ">
+                        <div class="accordion-body">Cambio directo dentro de un plazo de 10 (diez) dias corridos a partir de la fecha que recibio el producto en cuestion. Los motivos por los cuales se puede gestionar el cambio o devolucion son: producto defectuoso antes de probarse, producto defectuoso despues de ser utilizado, producto distinto al coprado. 
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
     
