footer links utiles

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -148,7 +148,7 @@
             </section>
 
             <!-- Devoluciones y Envios -->
-            <section class="devoluciones container-fluid justify-content-center accordion accordion-flush my-5" id="accordionFAQ">
+            <section class="devoluciones container-fluid justify-content-center accordion accordion-flush my-5" id="accordionPoliticas">
                 <h2 class="text-center">Politicas de Envios y Devoluciones</h2>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
@@ -156,7 +156,7 @@
                             Envios
                         </button>
                     </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFAQ">
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionPoliticas">
                         <div class="accordion-body">Hacemos envios a todo el pais. Para compras superiores a $5000, cubrimos el 50% del costo de envio. 
                         </div>
                     </div>
@@ -167,8 +167,8 @@
                             Devoluciones
                         </button>
                     </h2>
-                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFAQ">
-                        <div class="accordion-body">Cambio directo dentro de un plazo de 10 (diez) dias corridos a partir de la fecha que recibio el producto en cuestion. Los motivos por los cuales se puede gestionar el cambio o devolucion son: producto defectuoso antes de probarse, producto defectuoso despues de ser utilizado, producto distinto al coprado. 
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionPoliticas">
+                        <div class="accordion-body">Cambio directo dentro de un plazo de 10 (diez) dias corridos a partir de la fecha que recibio el producto en cuestion. Los motivos por los cuales se puede gestionar el cambio o devolucion son: producto defectuoso antes de probarse, producto defectuoso despues de ser utilizado, producto distinto al comprado. 
                         </div>
                     </div>
                 </div>
@@ -182,8 +182,8 @@
                     <div class="col-12 col-md-6">
                         <h5 class="text-uppercase font-weight-bold text-warning">Links Utiles</h5>
                         <ul class="text-white">
-                            <li> <a href="#">Delivery</a></li>
-                            <li><a href="#">Devoluciones</a></li>
+                            <li> <a href="productos.html#accordionPoliticas">Envios</a></li>
+                            <li><a href="productos.html#accordionPoliticas">Devoluciones</a></li>
                             <li><a href="#">Login</a></li>
                         </ul>
                     </div>
