--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                     <div class="col-12 col-md-6">
                         <h5 class="text-uppercase font-weight-bold text-warning">Links Utiles</h5>
                         <ul class="text-white">
-                            <li> <a href="#">Delivery</a></li>
-                            <li><a href="#">Devoluciones</a></li>
+                            <li> <a href="pages/productos.html#accordionPoliticas">Envios</a></li>
+                            <li><a href="pages/productos.html#accordionPoliticas">Devoluciones</a></li>
                             <li><a href="#">Login</a></li>
                         </ul>
                     </div>
