sidebar nav to div

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -65,7 +65,7 @@
         <main class="productos_main">
             <!-- Sidebar con filtro de Productos -->
             <section class="sidebar">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container justify-content-center">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#filtro-productos" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             Filtros<i class="bi bi-filter"></i>
@@ -88,7 +88,7 @@
                             </ul>
                         </div>
                     <div>
-                </nav>
+                </div>
             </section>
 
             <!-- Grid Productos -->
