--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                     <img src="public/testimonio-a.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="item-txt">
-                                    <h5>Cliente Uno</h5>
+                                    <h5>Gabriela Ramos</h5>
                                     <blockquote>Excelente atencion. La variedad de productos me sorprendio, asi como su calidad. El delivery tardo lo acordado.</blockquote>
                                 </div>
                             </div>
@@ -177,7 +177,7 @@
                                     <img src="public/testimonio-b.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="item-txt">
-                                    <h5>Cliente Dos</h5>
+                                    <h5>Javier Carriado</h5>
                                     <blockquote>Tienen los mejores precios. Llevo años comprando aqui y la unica vez que tuve un problema me cambiaron el producto en el acto, recomendado.</blockquote>
                                 </div>
                             </div>
@@ -188,7 +188,7 @@
                                     <img src="public/testimonio-c.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="item-txt">
-                                    <h5>Cliente Tres</h5>
+                                    <h5>Maria Martin</h5>
                                     <blockquote>Muy atentos. Necesite trasladar gran cantidad de material apicola y todo fue solucionado en cuestion de horas.</blockquote>
                                 </div>
                             </div>
