--- a/pages/productos.html
+++ b/pages/productos.html
@@ -72,17 +72,15 @@
                             Filtros<i class="bi bi-filter"></i>
                         </button>
                         <div class="collapse navbar-collapse flex-column align-items-start" id="filtro-productos">
-                            <h5>Categorias</h5>
-                            <ul class="navbar-nav flex-column ">
+                            <ul class="navbar-nav flex-column align-items-center align-items-md-start">
+                                <li><h5 class="mt-2">Categorias</h5></li>
                                 <li><a href="#">Productos de Colmena</a></li>
                                 <li><a href="#">Regalos</a></li>
                                 <li><a href="#">Indumentaria</a></li>                
                                 <li><a href="#">Herramientas</a></li>
                                 <li><a href="#">Maquinaria</a></li>
                                 <li><a href="#">Oferta</a></li>
-                            </ul>
-                            <h5 class="mt-5">Por peso</h5>
-                            <ul class="navbar-nav flex-column">
+                                <li><h5 class="mt-2">Por peso</h5></li>
                                 <li><a href="#" >1kg</a></li>
                                 <li><a href="#">1/2kg</a></li>
                                 <li><a href="#">1/4kg</a></li>
