--- a/404.html
+++ b/404.html
@@ -11,14 +11,14 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- My CSS -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/static_website/css/main.css">
     <title>Error</title>
 </head>
 <body>
     <main class="main_notfound">
-        <img src="/public/avispa.webp" alt="Imagen de una avispa.">
+        <img src="/static_website/public/avispa.webp" alt="Imagen de una avispa.">
         <h1>ERROR 404</h1>
-        <a href="/index.html"><button type="submit" class="btn btn-primary mt-3">Ir al Inicio</button></a>
+        <a href="/static_website/index.html"><button type="submit" class="btn btn-primary mt-3">Ir al Inicio</button></a>
     </main>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
