add message error 404

--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@
     <main class="main_notfound">
         <img src="/static_website/public/avispa.webp" alt="Imagen de una avispa.">
         <h1>ERROR 404</h1>
+        <h2>La pagina ingresada no existe.</h2>
         <a href="/static_website/index.html"><button type="submit" class="btn btn-primary mt-3">Ir al Inicio</button></a>
     </main>
     <!-- Bootstrap JS -->
