--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
 </head>
 <body>
     <div class="main-wrapper">
+
         <!-- Header (logo + barra de navegacion) -->
         <header class="header-index">
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
                 <div class="container">
+
                     <!-- Logo -->
                     <a class="navbar-brand shake" href="index.html" ><img id="logo" src="public/logo-final.webp" alt="Logo empresa"></a>
+
                     <!-- Hamburguer Menu -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
+
                     <!-- Navbar -->
                     <div class="collapse navbar-collapse text-uppercase" id="navbarNav">
                         <ul class="navbar-nav text-center ms-auto">
@@ -62,6 +66,7 @@
             </nav> 
         </header>
         
+        <!-- Main Section -->
         <main class="index_main">
 
             <!-- Hero Section -->
@@ -73,6 +78,8 @@
                         <a href="pages/productos.html"><button type="submit" class="btn btn-primary shake mt-3">Catalogo</button></a>
                     </div>
                 </div>
+
+                <!-- Beneficios -->
                 <div class="benefits container-fluid text-center color-bright">
                     <div class="row">
                         <div class="col-12 col-md-4 mb-2"><i class="bi bi-truck"></i> Envios a todo el pais</div>
@@ -80,7 +87,6 @@
                         <div class="col-12 col-md-4 mb-2"><i class="bi bi-clock"></i> Atendemos las 24 horas</div>
                     </div>
                 </div>
-
             </section>
 
             <!-- Productos Destacados Seccion -->
@@ -127,7 +133,7 @@
                 </div>
             </form>
 
-            <!-- Clases apicultura -->
+            <!-- Video mostrando clases de apicultura -->
             <section class="tutorias">
                 <h3 class="text-center mb-4">Sumate a nuestros cursos de apicultura!</h3>
                 <div class="ratio ratio-16x9">
@@ -135,7 +141,7 @@
                 </div>
             </section>
 
-            <!-- Negocios donde encontrarnos. Proveedores. -->
+            <!-- Negocios donde encontrarnos y Proveedores. -->
             <section class="negocios">
                 <div id="carouselNegocios" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -155,11 +161,12 @@
                 </div>
             </section>
 
+            <!-- Testimonios de clientes -->
             <section class="testimonios mt-5 color-dark">
                 <h3 class="text-center mb-5">Testimonios</h3>
-    
                 <div id="carouselTestimonios" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
+                        <!-- Cliente uno -->
                         <div class="carousel-item active" data-bs-interval="10000">
                             <div class="item">
                                 <div class="item-img">
@@ -171,6 +178,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Cliente dos -->
                         <div class="carousel-item" data-bs-interval="10000">
                             <div class="item">
                                 <div class="item-img">
@@ -182,6 +190,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Cliente tres -->
                         <div class="carousel-item" data-bs-interval="10000">
                             <div class="item">
                                 <div class="item-img">
