--- a/pages/productos.html
+++ b/pages/productos.html
@@ -64,6 +64,7 @@
 
         <!-- Main Section -->
         <main class="productos_main">
+
             <!-- Sidebar con filtro de Productos -->
             <section class="sidebar">
                 <div class="navbar navbar-expand-lg navbar-light bg-light">
@@ -146,7 +147,7 @@
 
             </section>
 
-            <!-- Devoluciones y Envios -->
+            <!-- Politica de Devoluciones y Envios -->
             <section class="devoluciones container-fluid justify-content-center accordion accordion-flush my-5" id="accordionPoliticas">
                 <h2 class="text-center">Politicas de Envios y Devoluciones</h2>
                 <div class="accordion-item">
